@@ -7,6 +7,7 @@ heatmaply 0.8.0 (2017-03-18)
       * Allow Rowv/Colv to also work for hclust (by turning them into a dendrogram).
       * Add examples to heatmaply's Rd and the vignette on using Rowv/Colv.
       * Added the parameters hclust_method, dist_method to allow a more refined control over dist and hclust functions which are creating the dendrograms. A user wanting an even more refined control should just supply dendrograms directly to Rowv and Colv.
+  * Added the parameters: distfun_row, hclustfun_row, distfun_col, hclustfun_col. They allow a more refine control over the dendrograms of the rows/columns (without the user needing to create the dendrograms from scratch)
 
 
 
